<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tv_ran_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_ratingbar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ran_Rating"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_ran_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:text="@string/tv_txt_note" />

    <TextView
        android:id="@+id/tv_ran_note_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_save_edit_note"
        android:layout_below="@+id/tv_ran_note"
        android:layout_margin="10dp"
        android:scrollbars="vertical"
        android:text="@string/tv_txt_add_your_note" />

    <EditText
        android:id="@+id/et_ran_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_save_edit_note"
        android:layout_below="@+id/tv_ran_note"
        android:layout_margin="6dp"
        android:gravity="top"
        android:text="@string/et_txt_add_your_note"
        android:visibility="gone" />

    <Button
        android:id="@+id/but_save_edit_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:onClick="onButtonClick"
        android:text="@string/bt_txt_edit_note" />

</RelativeLayout>