<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_run_activity" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_txt_time"
            android:textSize="25dip" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_time"
            android:textSize="25dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_time"
            android:text="@string/tv_txt_distance"
            android:textSize="25dip" />

        <TextView
            android:id="@+id/tv_distanceEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_distance"
            android:layout_toRightOf="@+id/tv_distance"
            android:text="0.0 km"
            android:textSize="25dip" />

        <TextView
            android:id="@+id/tv_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_distance"
            android:text="@string/tv_txt_steps"
            android:textSize="25dip" />

        <TextView
            android:id="@+id/tv_stepEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_step"
            android:layout_toRightOf="@+id/tv_step"
            android:text="0 Steps"
            android:textSize="25dip" />

        <Button
            android:id="@+id/but_start_pause"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:onClick="onButtonClick"
            android:text="@string/bt_txt_start" />

        <ImageView
            android:id="@+id/im_modus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

</LinearLayout>