<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/im_ov_modus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_mode_car" />

    <ImageView
        android:id="@+id/tv_ov_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_date" />

    <TextView
        android:id="@+id/tv_ov_dateEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_ov_date"
        android:text="1.1.1970 12:34"
        android:textSize="25dip" />

    <ImageView
        android:id="@+id/im_ov_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ov_date"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_timer" />

    <TextView
        android:id="@+id/tv_ov_timeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ov_date"
        android:layout_toRightOf="@+id/im_ov_timer"
        android:text="0:00"
        android:textSize="25dip" />

    <ImageView
        android:id="@+id/im_ov_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ov_timeEdit"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_distance" />

    <TextView
        android:id="@+id/tv_ov_distanceEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ov_timeEdit"
        android:layout_toRightOf="@+id/im_ov_distance"
        android:text="0.0 km"
        android:textSize="25dip" />

    <ImageView
        android:id="@+id/im_ov_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ov_distanceEdit"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_steps" />

    <TextView
        android:id="@+id/tv_ov_stepEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ov_distanceEdit"
        android:layout_toRightOf="@+id/im_ov_steps"
        android:text="0 Steps"
        android:textSize="25dip" />

    <View
        android:id="@+id/view_line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_ov_stepEdit"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#99FFFFFF" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line1"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/view_line2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/ratingBar"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#99FFFFFF" />

    <TextView
        android:id="@+id/tv_ov_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line2"
        android:text="@string/tv_txt_note" />

    <TextView
        android:id="@+id/tv_ov_note_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_save_edit_note"
        android:layout_below="@+id/tv_ov_note"
        android:layout_margin="10dp"
        android:background="#22FFFFFF"
        android:scrollbars="vertical"
        android:text="@string/tv_txt_add_your_note" />

    <EditText
        android:id="@+id/et_ov_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/but_save_edit_note"
        android:layout_below="@+id/view_line2"
        android:layout_margin="6dp"
        android:gravity="top"
        android:inputType="text"
        android:text="@string/et_txt_add_your_note"
        android:visibility="gone" />

    <Button
        android:id="@+id/but_save_edit_note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:onClick="onButtonClick"
        android:text="@string/bt_txt_edit_note" />

</RelativeLayout>